methods.basics.Methods.scala.error
Erreur de compilation :
Methods:5: error: not found: value casesAvancees
    casesAvancees = casesAvancees + 1
    ^Methods:8: error: not found: value casesAvancees
  for (k <- 1 to casesAvancees)
                 ^